2013-03-27  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.21.0-rc2 Released.

	* Do not allow native RTP bridging if packetization of media streams
	differs.

	The RTP engine will no longer allow for local and remote native RTP
	bridges	if packetization of streams differs. Allowing native bridging
	in this	scenario has been known to cause FAX failures.

	* Resolve deadlock between pending CDR and batch CDR locks

	r375757 attempted to resolve a race condition between multiple
	submissions of CDRs while in batch mode from attempting to destroy the
	scheduled batch	submission by extending the batch CDR lock. Unfortunately,
	this causes a deadlock between the pending CDR lock and the batch CDR lock.
	This patch resolves the intent of r375757 by simply providing a new lock
	that protects the scheduling of the batches. The original batch CDR lock
	is kept to protect manipulation of the batch CDR settings, but has been
	placed such that it is not held when the pending lock is held.

	Thanks to Chase Venters for providing lock analysis on the issue.

	* Resolve deadlock between SIP registration and channel based
	functions

	In r373424, several reentrancy problems in chan_sip were addressed. As
	a result, the SIP channel driver is now properly locking the channel
	driver private information in certain operations that it wasn't previously.
	This exposed two latent problems either in register_verify or by functions
	called by register_verify. This includes:
	 * Holding the private lock while calling sip_send_mwi_to_peer. This
	 can create a new sip_pvt via sip_alloc, which will obtain the channel
	 container lock. This is a locking inversion, as any channel related lock
	 must be obtained prior to obtaining the SIP channel technology private
	 lock.
	 * Holding the private lock while calling sip_poke_peer. In the same vein as
         sip_send_mwi_to_peer, sip_poke_peer can create a new SIP private, causing
         the same locking inversion.
