@@ -1,102 +1,0 @@
-                                Release Summary
-
-                             asterisk-1.8.21.0-rc2
-
-                                Date: 2013-03-27
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.8.21.0-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   5 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 383966   | bebuild | Create 1.8.21.0-rc2           |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 383969   | bebuild | Update version, remove        |                   |
-   |          |         | summaries, merge blockers     |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 383972   | bebuild | Merge r383863 for             |                   |
-   |          |         | ASTERISK-21068                |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 384086   | bebuild | Update with security patches; |                   |
-   |          |         | regression fixes              |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 384089   | bebuild | Update ChangeLog              |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                           |    2
- ChangeLog                          |   93 +++++
- asterisk-1.8.21.0-rc1-summary.html |  465 -----------------------------
- asterisk-1.8.21.0-rc1-summary.txt  |  576 -------------------------------------
- channels/chan_sip.c                |  135 +++++---
- channels/sip/include/sip.h         |    1
- main/cdr.c                         |   24 +
- main/http.c                        |    9
- main/rtp_engine.c                  |   13
- res/res_rtp_asterisk.c             |    2
- 10 files changed, 229 insertions(+), 1091 deletions(-)
-
-     ----------------------------------------------------------------------
