@@ -1,3 +1,7 @@
+2013-03-28  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.21.0 Released.
+
 2013-03-27  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.21.0-rc2 Released.
